# backend/apidoc.yaml
@@ -14,6 +14,17 @@ produces:
 
 paths:
 #       Beer Page       #
+  /getBeers:
+    get:
+      description: selects all beers
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: array
+        "400":
+          description: Bad Request
+
   /getBarsForBeer:
     post:
       description: show bars where this beer sells the most (again only top 10)
@@ -158,6 +169,17 @@ paths:
             "400":
               description: Bad Request
 #             Bar Page        #
+    /getBars:
+      get:
+        description: selects all bars
+        responses:
+          "200":
+            description: OK
+            schema:
+              type: array
+          "400":
+            description: Bad Request
+
     /getTop10Spenders:
       post:
         description: top10 drinkers who are largest spenders,
